--- a/servises/business-uae.html
+++ b/servises/business-uae.html
@@ -69,9 +69,9 @@
                                             <li class="dropdown">
                                                 <a href="javascript:void(0);" class="dropbtn" data-key="switch">Language 🌍</a>
                                                 <div class="dropdown-content">
-                                                    <a href="#" onclick="changeLanguage('en')"><img src="./assets/img/icon/uk.png" alt="English"> Eng</a>
-                                                    <a href="#" onclick="changeLanguage('fr')"><img src="./assets/img/icon/fr.png" alt="Français"> Fra</a>
-                                                    <a href="#" onclick="changeLanguage('ar')"><img src="./assets/img/icon/ar.png" alt="العربية"> Arab</a>
+                                                    <a href="#" onclick="changeLanguage('en')"><img src="../assets/img/icon/uk.png" alt="English"> Eng</a>
+                                                    <a href="#" onclick="changeLanguage('fr')"><img src="../assets/img/icon/fr.png" alt="Français"> Fra</a>
+                                                    <a href="#" onclick="changeLanguage('ar')"><img src="../assets/img/icon/ar.png" alt="العربية"> Arab</a>
                                                 </div>
                                             </li>
                                         </ul>
@@ -92,7 +92,7 @@
     <main>
         <!-- slider Area Start-->
         <div class="slider-area ">
-            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess2.jpg">
+            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess1.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
@@ -224,7 +224,7 @@
 
 	<!-- JS here -->
 	
-        <script src="./assets/js/translate.js"> </script>
+        <script src="../assets/js/translate.js"> </script>
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
         <script>
             AOS.init();
