--- a/project.html
+++ b/project.html
@@ -136,6 +136,7 @@
                                     <div class="row" style="justify-content: center; align-items: center;">
                                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
                                             <div class="single-team mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
+                                                <a href="./team/member1.html">
                                                 <div class="team-img">
                                                     <img src="assets/img/team/team1.jpg" alt="">
                                                 </div>
@@ -143,6 +144,7 @@
                                                     <span data-key="team-job1">Advocates & Legal Consultants</span>
                                                     <h3>Denis Acker</h3>
                                                 </div>
+                                                </a>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
@@ -162,13 +164,15 @@
                                         </div>
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
                                             <div class="single-team mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
-                                                <div class="team-img">
-                                                    <img src="assets/img/team/team2.jpg" alt="">
-                                                </div>
-                                                <div class="team-caption">
-                                                    <span data-key="team-job2">Advocate & Legal Advisor</span>
-                                                    <h3>Jordana Dray</h3>
-                                                </div>
+                                                <a href="./team/member2.html">
+                                                    <div class="team-img">
+                                                        <img src="assets/img/team/team2.jpg" alt="">
+                                                    </div>
+                                                    <div class="team-caption">
+                                                        <span data-key="team-job2">Advocate & Legal Advisor</span>
+                                                        <h3>Jordana Dray</h3>
+                                                    </div>
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
