--- a/team/member1.html
+++ b/team/member1.html
@@ -49,7 +49,7 @@
                             <div class="col-xl-2 col-lg-2 col-md-1">
                                 <div class="logo">
                                     <!-- logo-1 -->
-                                     <a href="../index.html" class="big-logo"><img src="../assets/img/logo/logo.png" alt=""></a>
+                                    <a href="../index.html" class="big-logo"><img src="../assets/img/logo/logo.png" alt=""></a>
                                     <!-- logo-2 -->
                                     <a href="../index.html" class="small-logo"><img class="logo-img" src="../assets/img/logo/loder-logo.png" alt=""></a>
                                 </div>
@@ -92,16 +92,16 @@
     <main>
         <!-- slider Area Start-->
         <div class="slider-area ">
-            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess9.png">
+            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/team/team1.2.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero-cap pt-100">
-                                <h2 data-key="service3">CRIMINAL LAW</h2>
+                                <h2>Denis Acker</h2>
                                 <nav aria-label="breadcrumb ">
                                     <ol class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="../index.html" data-key="nav-home">Home</a></li>
-                                        <li class="breadcrumb-item"><a href="../services.html" data-key="nav-services">Services</a></li>  
+                                        <li class="breadcrumb-item"><a href="../project.html" data-key="nav-team">team</a></li> 
                                     </ol>
                                 </nav>
                             </div>
@@ -111,44 +111,184 @@
             </div>
         </div>
         <!-- slider Area End-->
-      <!-- Services Details Start -->
-<div class="services-details-area">
+<!-- About Area Start -->
+<section class="support-company-area fix pt-100 pb-145">
+    <div class="support-wrapper align-items-end">
+        <div class="left-content" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
+            <!-- Section Title -->
+            <div class="section-tittle section-tittle2 mb-55">
+                <div class="front-text">
+                    <h2>Denis Acker</h2>
+                </div>
+            </div>
+            <div class="support-caption">
+                <p class="pera-top">Advocates & Legal Consultants</p>
+                <p>Denis Acker, Founding Partner Of Acker Choquette  is a Canadian Attorney co-founder of the Legal Consultancy Firm Acker Choquette which is operating out of Dubai.
+                    Denis is a member of the Quebec Bar Association with over twenty years of experience.
+                   He is specialized in Company Formation, Establishment of Trusts and Foundations as well as Investment Immigration.
+                   He gives guidance to foreign investors in their projects of establishment in Malta and further afield in other EU countries.
+                   </p>
+                   <a href="../services.html" class="btn red-btn2" data-key="service-title">Our Services</a>
+            </div>
+
+        </div>
+
+        <!-- Right Side with Images -->
+        <div class="right-content" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300">
+            <div class="image-wrapper">
+                <img src="../assets/img/team/team1.jpg" alt="Lawyer 1" class="image-card foreground">
+                <img src="../assets/img/team/team1.1.jpg" alt="Lawyer 2" class="image-card background">
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Achievements Section Start -->
+<section class="achievements-area fix pt-100 pb-100">
     <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="single-services section-padding2">
-                    <div class="details-caption">
-                        <h3 data-key="service3">Criminal Law</h3>
-                        <p class="mb-50" data-key="service3-description">Our criminal law and compliance services in the UAE are designed to provide expert guidance and robust defense. With a deep understanding of the complexities of UAE criminal law and the Dubai justice system, our team of seasoned lawyers ensures comprehensive support throughout every stage of your case. From sound legal advice to developing effective, tailored defense strategies, we are committed to protecting your rights and achieving the best possible outcomes.</p>
-                        <!-- Styled List -->
-                        <h3 class="mt-5" data-key="service3-key">Key areas of our criminal law services include:</h3>
-                        <ul class="styled-list">
-                            <li data-key="service3-item1">Criminal Defense: Representing clients in criminal cases to safeguard their rights and ensure a fair trial.</li>
-                            <li data-key="service3-item2">Legal Advice: Providing expert legal counsel on criminal matters to help clients understand their options.</li>
-                            <li data-key="service3-item3">Investigation Support: Assisting in the investigation phase by ensuring all evidence is handled properly and fairly.</li>
-                            <li data-key="service3-item4">Appeals: Representing clients in appeals to challenge unfair convictions or sentences.</li>
-                            <li data-key="service3-item5">Compliance: Ensuring compliance with UAE laws, regulations, and procedures throughout the criminal process.</li>
-                            <li data-key="service3-item6">Case Management: Offering complete support throughout the legal process, from arrest to trial and sentencing.</li>
-                        </ul>                                                                         
-                        <h3 data-key="service-title"><br>Our service</h3>
-                        <p data-key="service3-content">At Acker Choquette Dray Legal Consultants, we specialize in criminal law, offering expert defense strategies and legal advice in the UAE. Our experienced legal team is committed to providing robust representation in criminal cases, whether you're facing charges or need assistance with compliance issues. We guide clients through every stage of the criminal justice process, ensuring that their rights are protected and their best interests are upheld. Let us help you navigate the complexities of criminal law in the UAE and achieve the most favorable outcome possible.</p>
-                         <!-- Add Contact Button -->
-                        <div class="contact mt-4">
-                            <a href="../contact.html" class="contact-btn">
-                                Contact Us
-                            </a>
-                        </div>
+        <div class="row align-items-center">
+            <div class="col-lg-6" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300">
+                <div class="achievements-img">
+                    <img src="../assets/img/team/team1.1.jpg" alt="Denis Acker Achievements" class="img-fluid">
+                </div>
+            </div>
+            <div class="col-lg-6" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
+                <div class="section-tittle mb-55">
+                    <h2>Denis Acker's Achievements</h2>
+                </div>
+                <div class="achievements-content">
+                    <ul class="achievement-list">
+                        <li><i class="fas fa-check-circle"></i> Over 20 years of experience in corporate and investment law.</li>
+                        <li><i class="fas fa-check-circle"></i> Successfully assisted numerous multinational corporations in setting up businesses in the UAE and EU.</li>
+                        <li><i class="fas fa-check-circle"></i> Expert in trust formation and asset protection strategies.</li>
+                        <li><i class="fas fa-check-circle"></i> Recognized for his work in investment immigration and international business structuring.</li>
+                        <li><i class="fas fa-check-circle"></i> Regular speaker at international legal and business conferences.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Achievements Section End -->
+
+<!-- Testimonials Section Start -->
+<!-- Testimonials Section -->
+<section class="testimonials-section">
+    <div class="container">
+        <div class="section-title text-center">
+            <h2>What Our Clients Say</h2>
+        </div>
+
+        <div class="testimonials-container">
+            <!-- Testimonial 1 -->
+            <div class="testimonial-card">
+                <div class="quote-icon">❝</div>
+                <h3 class="testimonial-title">Exceptional Legal Expertise</h3>
+                <p class="testimonial-text">
+                    Denis Acker Law Firm handled my case with the highest level of professionalism and dedication. Their attention to detail and deep legal knowledge ensured a successful outcome in my favor. I couldn't have asked for a better legal team!
+                </p>
+                <div class="testimonial-author">
+                    <img src="../assets/img/comment/comment_1.png" alt="Client Image">
+                    <div class="author-info">
+                        <h4>Emily Watson</h4>
+                        <span> Business Owner</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Testimonial 2 -->
+            <div class="testimonial-card">
+                <div class="quote-icon">❝</div>
+                <h3 class="testimonial-title">Trustworthy & Results-Driven</h3>
+                <p class="testimonial-text">
+                    Denis Acker Law Firm has an impressive track record, and my experience with them was no different. They provided expert legal counsel, clear communication, and ultimately won my case. I highly recommend their services to anyone in need of a top-tier legal team!
+                </p>
+                <div class="testimonial-author">
+                    <img src="../assets/img/comment/comment_2.png" alt="Client Image">
+                    <div class="author-info">
+                        <h4> Sarah Mitchell </h4>
+                        <span>Entrepreneur</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Testimonial 3 -->
+            <div class="testimonial-card">
+                <div class="quote-icon">❝</div>
+                <h3 class="testimonial-title">Winning Against All Odds</h3>
+                <p class="testimonial-text">
+                    I was facing a tough legal battle, but Denis Acker and his team fought relentlessly for me. Their strategic approach and commitment to justice led to a remarkable victory. They truly go above and beyond for their clients!
+                </p>
+                <div class="testimonial-author">
+                    <img src="../assets/img/comment/comment_3.png" alt="Client Image">
+                    <div class="author-info">
+                        <h4>Michael Carter</h4>
+                        <span>CEO of TechVision</span>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Services Details End -->
+</section>
 
-    </main>
-<footer>
-    <!-- Footer Start-->
+<!-- Testimonials Section End -->
+<!-- FAQ Section Start -->
+<section class="faq-section pt-100 pb-100">
+    <div class="container">
+        <div class="section-title text-center mb-55">
+            <h2>Frequently Asked Questions</h2>
+        </div>
+
+        <div class="faq-container">
+            <!-- Question 1 -->
+            <div class="faq-item">
+                <div class="faq-question">
+                    <h4>What Is Your Success Rate?</h4>
+                    <span class="faq-toggle">▲</span>
+                </div>
+                <div class="faq-answer">
+                    <p>Each case is specific. Our global success rate is 96%.</p>
+                </div>
+            </div>
+
+            <!-- Question 2 -->
+            <div class="faq-item">
+                <div class="faq-question">
+                    <h4>Can You Help Me?</h4>
+                    <span class="faq-toggle">▲</span>
+                </div>
+                <div class="faq-answer">
+                    <p>Acker Choquette law firm does its best to solve each case and meet the expectations of its clients.</p>
+                </div>
+            </div>
+
+            <!-- Question 3 -->
+            <div class="faq-item">
+                <div class="faq-question">
+                    <h4>Can I Contact You At Anytime?</h4>
+                    <span class="faq-toggle">▲</span>
+                </div>
+                <div class="faq-answer">
+                    <p>Definitely yes! Feel free to send an email or fill the form in our "contact us" section. Our team will respond as soon as possible.</p>
+                </div>
+            </div>
+
+            <!-- Question 4 -->
+            <div class="faq-item">
+                <div class="faq-question">
+                    <h4>Are You Looking For New Attorneys?</h4>
+                    <span class="faq-toggle">▲</span>
+                </div>
+                <div class="faq-answer">
+                    <p>Not at the moment, but feel free to send your resume to our email address.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- FAQ Section End -->
+
+
     <div class="footer-main">
         <div class="footer-area footer-padding">
             <div class="container">
@@ -219,7 +359,6 @@
     </div>
     <!-- Footer End-->
 </footer>
-
    
 
 	<!-- JS here -->
@@ -228,6 +367,16 @@
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
         <script>
             AOS.init();
+            document.addEventListener("DOMContentLoaded", function () {
+    const faqItems = document.querySelectorAll(".faq-item");
+
+    faqItems.forEach((item) => {
+        item.addEventListener("click", function () {
+            this.classList.toggle("active");
+        });
+    });
+});
+
         </script>
 		<!-- All JS Custom Plugins Link Here here -->
         <script src="./../assets/js/vendor/modernizr-3.5.0.min.js"></script>
