--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
                     <ul class="david-info">
                         <li> | &nbsp; &nbsp;  24 December 2024</li>
                     </ul>
-                    <h2><a href="#" data-key="news-text1">Empowering Global Business: Navigating Markets and Legal Systems Across Borders</a></h2>
-                    <a href="#" class="d-btn" data-key="news-btn">Read more »</a>
+                    <h2><a href="blog.html" data-key="news-text1">Empowering Global Business: Navigating Markets and Legal Systems Across Borders</a></h2>
+                    <a href="blog.html" class="d-btn" data-key="news-btn">Read more »</a>
                 </div>
             </div>
         </div>
@@ -323,8 +323,8 @@
                     <ul class="david-info">
                         <li> | &nbsp; &nbsp;  24 Novembre 2024</li>
                     </ul>
-                    <h2><a href="#" data-key="news-text2">Representing Client Interests: Versatility and Mobility in a Globalized World</a></h2>
-                    <a href="#" class="d-btn" data-key="news-btn">Read more » </a>
+                    <h2><a href="blog.html" data-key="news-text2">Representing Client Interests: Versatility and Mobility in a Globalized World</a></h2>
+                    <a href="blog.html" class="d-btn" data-key="news-btn">Read more » </a>
                 </div>
             </div>
        </div>
