--- a/team/member2.html
+++ b/team/member2.html
@@ -155,11 +155,11 @@
                 </div>
                 <div class="achievements-content">
                     <ul class="achievement-list">
-                        <li><i class="fas fa-check-circle"></i> Over 20 years of experience in corporate and investment law.</li>
-                        <li><i class="fas fa-check-circle"></i> Successfully assisted numerous multinational corporations in setting up businesses in the UAE and EU.</li>
-                        <li><i class="fas fa-check-circle"></i> Expert in trust formation and asset protection strategies.</li>
-                        <li><i class="fas fa-check-circle"></i> Recognized for his work in investment immigration and international business structuring.</li>
-                        <li><i class="fas fa-check-circle"></i> Regular speaker at international legal and business conferences.</li>
+                        <li><i class="fas fa-check-circle"></i> Over a decade of experience in international business law and white-collar crime.</li>
+                        <li><i class="fas fa-check-circle"></i> Successfully assisted companies and individuals in expanding into the Middle East, Africa, and Europe.</li>
+                        <li><i class="fas fa-check-circle"></i> Expert in cross-border legal strategies, corporate compliance, and international trade law.</li>
+                        <li><i class="fas fa-check-circle"></i> Admitted to both the Paris Bar and as a Solicitor of England and Wales, allowing for multinational legal representation.</li>
+                        <li><i class="fas fa-check-circle"></i> Regularly collaborates with leading law firms and professionals worldwide to provide tailored legal solutions.</li>
                     </ul>
                 </div>
             </div>
