--- a/Blogs/emiratisation.html
+++ b/Blogs/emiratisation.html
@@ -110,7 +110,7 @@
             <div class="col-12">
                 <div class="single-services">
                     <div class="details-img">
-                        <img src="assets/img/gallery/project_details.jpg" alt="">
+                        <img src="assets/img/gallery/project_details.webp" alt="">
                     </div>
                     <div class="details-caption">
                         <p>
