--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess1.jpg" alt="">
+                                                        <img src="assets/img/service/servicess1.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/business-uae.html" class="plus-btn"><i class="fas fa-briefcase"></i></a>
@@ -170,7 +170,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess4.jpg" alt="">
+                                                        <img src="assets/img/service/servicess4.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/intellectual-law.html" class="plus-btn"><i class="fas fa-heart"></i></a>
@@ -181,7 +181,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess9.png" alt="">
+                                                        <img src="assets/img/service/servicess9.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/criminal-law.html" class="plus-btn"><i class="fas fa-shield-alt"></i></a>
@@ -192,7 +192,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" >
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess7.jpg" alt="">
+                                                        <img src="assets/img/service/servicess7.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/legal-Imegration.html" class="plus-btn"><i class="fas fa-handshake"></i></a>
@@ -203,7 +203,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess8.png" alt="">
+                                                        <img src="assets/img/service/servicess8.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/tax-law.html" class="plus-btn"><i class="fas fa-building"></i></a>
@@ -214,7 +214,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess3.jpg" alt="">
+                                                        <img src="assets/img/service/servicess3.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/wills-law.html" class="plus-btn"><i class="fas fa-home"></i></a>
@@ -261,7 +261,7 @@
 </section>
 
         <!-- contact with us Start -->
-            <section class="contact-with-area" data-background="assets/img/gallery/section-bg2.jpg" data-aos="fade-up">
+            <section class="contact-with-area" data-background="assets/img/gallery/section-bg2.webp" data-aos="fade-up">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-8 col-lg-9 offset-xl-1 offset-lg-1">
@@ -302,7 +302,7 @@
             <!-- single-news -->
             <div class="single-news mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                 <div class="news-img">
-                    <img src="assets/img/david/david_1.png" alt="">
+                    <img src="assets/img/david/david_1.webp" alt="">
                 </div>
                 <div class="news-caption">
                     <ul class="david-info">
@@ -317,7 +317,7 @@
             <!-- single-news -->
             <div class="single-news mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                 <div class="news-img">
-                    <img src="assets/img/david/david_2.png" alt="">
+                    <img src="assets/img/david/david_2.webp" alt="">
                 </div>
                 <div class="news-caption">
                     <ul class="david-info">
