--- a/project.html
+++ b/project.html
@@ -91,7 +91,7 @@
     <main>
         <!-- slider Area Start-->
         <div class="slider-area ">
-            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="assets/img/hero/about0.png">
+            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="assets/img/hero/about0.webp">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
