--- a/services.html
+++ b/services.html
@@ -94,7 +94,7 @@
     <main>
         <!-- slider Area Start-->
         <div class="slider-area ">
-            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="assets/img/hero/about.png">
+            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="assets/img/hero/about.webp">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
@@ -156,7 +156,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess1.jpg" alt="">
+                                                        <img src="assets/img/service/servicess1.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/business-uae.html" class="plus-btn"><i class="fas fa-briefcase"></i></a>
@@ -167,7 +167,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess5.jpg" alt="">
+                                                        <img src="assets/img/service/servicess5.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/arbitration-resolution.html" class="plus-btn"><i class="fas fa-balance-scale"></i></a>
@@ -178,7 +178,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess9.png" alt="">
+                                                        <img src="assets/img/service/servicess9.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/criminal-law.html" class="plus-btn"><i class="fas fa-shield-alt"></i></a>
@@ -189,7 +189,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess7.jpg" alt="">
+                                                        <img src="assets/img/service/servicess7.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/legal-Imegration.html" class="plus-btn"><i class="fas fa-handshake"></i></a>
@@ -200,7 +200,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess8.png" alt="">
+                                                        <img src="assets/img/service/servicess8.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/tax-law.html" class="plus-btn"><i class="fas fa-building"></i></a>
@@ -211,7 +211,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess3.jpg" alt="">
+                                                        <img src="assets/img/service/servicess3.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/wills-law.html" class="plus-btn"><i class="fas fa-home"></i></a>
@@ -222,7 +222,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess6.jpg" alt="">
+                                                        <img src="assets/img/service/servicess6.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/familly-law.html" class="plus-btn"><i class="fas fa-users"></i></a>
@@ -233,7 +233,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess10.png" alt="">
+                                                        <img src="assets/img/service/servicess10.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/corporate-law.html" class="plus-btn"><i class="fas fa-gavel"></i></a>
@@ -244,7 +244,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess4.jpg" alt="">
+                                                        <img src="assets/img/service/servicess4.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/intellectual-law.html" class="plus-btn"><i class="fas fa-heart"></i></a>
@@ -262,7 +262,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess1.jpg" alt="">
+                                                        <img src="assets/img/service/servicess1.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/business-uae.html" class="plus-btn"><i class="fas fa-briefcase"></i></a>
@@ -273,7 +273,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess2.jpg" alt="">
+                                                        <img src="assets/img/service/servicess2.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/commercial-law.html" class="plus-btn"><i class="fas fa-shopping-cart"></i></a>
@@ -284,7 +284,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess10.png" alt="">
+                                                        <img src="assets/img/service/servicess10.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/corporate-law.html" class="plus-btn"><i class="fas fa-gavel"></i></a>
@@ -302,7 +302,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess4.jpg" alt="">
+                                                        <img src="assets/img/service/servicess4.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/intellectual-law.html" class="plus-btn"><i class="fas fa-heart"></i></a>
@@ -320,7 +320,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess6.jpg" alt="">
+                                                        <img src="assets/img/service/servicess6.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/familly-law.html" class="plus-btn"><i class="fas fa-users"></i></a>
@@ -331,7 +331,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess9.png" alt="">
+                                                        <img src="assets/img/service/servicess9.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/criminal-law.html" class="plus-btn"><i class="fas fa-shield-alt"></i></a>
@@ -342,7 +342,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess3.jpg" alt="">
+                                                        <img src="assets/img/service/servicess3.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/wills-law.html" class="plus-btn"><i class="fas fa-home"></i></a>
@@ -360,7 +360,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess4.jpg" alt="">
+                                                        <img src="assets/img/service/servicess4.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/intellectual-law.html" class="plus-btn"><i class="fas fa-heart"></i></a>
@@ -371,7 +371,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess7.jpg" alt="">
+                                                        <img src="assets/img/service/servicess7.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/legal-Imegration.html" class="plus-btn"><i class="fas fa-handshake"></i></a>
@@ -382,7 +382,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess8.png" alt="">
+                                                        <img src="assets/img/service/servicess8.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/tax-law.html" class="plus-btn"><i class="fas fa-building"></i></a>
@@ -393,7 +393,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess5.jpg" alt="">
+                                                        <img src="assets/img/service/servicess5.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/arbitration-dispute.html" class="plus-btn"><i class="fas fa-balance-scale"></i></a>
