--- a/servises/arbitration-resolution.html
+++ b/servises/arbitration-resolution.html
@@ -92,7 +92,7 @@
     <main>
         <!-- slider Area Start-->
         <div class="slider-area ">
-            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess5.jpg" style="background-position: center bottom;">
+            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess5.webp" style="background-position: center bottom;">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
