--- a/servises/legal-Imegration.html
+++ b/servises/legal-Imegration.html
@@ -92,7 +92,7 @@
     <main>
         <!-- slider Area Start-->
         <div class="slider-area ">
-            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess7.jpg">
+            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess7.webp">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
