--- a/team/member2.html
+++ b/team/member2.html
@@ -123,8 +123,8 @@
             </div>
             <div class="support-caption">
                 <p class="pera-top">Advocate & Legal Advisor</p>
-                <p>Enriched by an International background, working in Paris at #Olivier Metzner LLP and D. O. #Kaminski LLP, member of the program #Paris Bar Inns of Courts (collaboration between the English Bar and Paris Bar); working in Israel for #Meitar Liquvornik Geva Leshem and Pr. Yuval Levy and in UAE, partner at #Binmes'har& Co before joining ACD LAW, Jordana Dray managed to get an International vision and practice in order to measure today’s challenges for companies and individuals through the Legal sphere.
-                   </p>
+                <p>Jordana Dray is an internationally experienced legal expert specializing in cross-border matters and complex litigation. She has worked in Paris at Olivier Metzner LLP and D.O. Kaminski LLP, in Israel with Meitar Liquvornik Geva Leshem and Professor Yuval Levy, and in the UAE as a partner at Binmes’har & Co. before joining ACD LAW. <br> As a member of the Paris Bar Inns of Court program and The Association of Criminal Lawyers (ADAP), she leverages her global expertise to help individuals and companies navigate legal challenges between Europe and the Middle East. Fluent in French, English, and Hebrew, she is a trusted advisor in international law.
+                    </p>
                    <a href="../services.html" class="btn red-btn2" data-key="service-title">Our Services</a>
             </div>
 
@@ -155,11 +155,13 @@
                 </div>
                 <div class="achievements-content">
                     <ul class="achievement-list">
-                        <li><i class="fas fa-check-circle"></i> Over a decade of experience in international business law and white-collar crime.</li>
-                        <li><i class="fas fa-check-circle"></i> Successfully assisted companies and individuals in expanding into the Middle East, Africa, and Europe.</li>
-                        <li><i class="fas fa-check-circle"></i> Expert in cross-border legal strategies, corporate compliance, and international trade law.</li>
-                        <li><i class="fas fa-check-circle"></i> Admitted to both the Paris Bar and as a Solicitor of England and Wales, allowing for multinational legal representation.</li>
-                        <li><i class="fas fa-check-circle"></i> Regularly collaborates with leading law firms and professionals worldwide to provide tailored legal solutions.</li>
+                        <li><i class="fas fa-check-circle"></i> Member of Paris Bar .</li>
+                        <li><i class="fas fa-check-circle"></i> Solicitor of the Senior Courts of England and Wales.</li>
+                        <li><i class="fas fa-check-circle"></i> Dubai Legal Consultant.</li>
+                        <li><i class="fas fa-check-circle"></i> Dubai DIFC Courts registered practitioner.</li>
+                        <li><i class="fas fa-check-circle"></i> ADGM Courts (Abu Dhabi) registered practitioner.</li>
+                        <li><i class="fas fa-check-circle"></i> List Counsel at the International Criminal Courts in the Hague.</li>
+                        <li><i class="fas fa-check-circle"></i> DIFC will draftsmen.</li>
                     </ul>
                 </div>
             </div>
@@ -357,6 +359,20 @@
     <!-- Footer End-->
 </footer>
    
+<script>
+    document.querySelector(".background").addEventListener("click", function () {
+     let foreground = document.querySelector(".foreground");
+     let background = document.querySelector(".background");
+ 
+     // Swap z-index
+     foreground.classList.toggle("background");
+     foreground.classList.toggle("foreground");
+ 
+     background.classList.toggle("foreground");
+     background.classList.toggle("background");
+ });
+ 
+ </script>
 
 	<!-- JS here -->
 	
